@@ -7,7 +7,6 @@
     <artifactId>traveller</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>traveller-presentation</module>
         <module>traveller-model</module>
         <module>traveller-persistence</module>
         <module>traveller-service</module>
@@ -82,6 +81,16 @@
             <version>${jmh.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.1</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -125,8 +134,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.20</version>
                 <configuration>
-                    <argLine>--add-modules java.xml.bind
-                        -Djdk.attach.allowAttachSelf=true</argLine>
+                    <argLine>-Djdk.attach.allowAttachSelf=true</argLine>
                 </configuration>
             </plugin>
         </plugins>
